Fixed header language menu on small screens Previously, language menu and search icon were always on the same line with the page title. Now on small screens, they are on different lines. Also, title's margin rules are changed so it's on the center.

--- a/modules/ytp-assets-common/src/less/navbars.less
+++ b/modules/ytp-assets-common/src/less/navbars.less
@@ -91,6 +91,14 @@ End of dropdown CSS
   margin-left: auto;
 }
 
+@media only screen and (max-width: 500px) {
+  .region-top-bar {
+    flex-direction: column;
+    .logo {
+      margin-right: 0px;
+    }
+  }
+}
 #block-avoindata-language-switcher ul {
   margin: 0px;
   //To make the space between search icon similar to space
